@@ -28,7 +28,7 @@ With this option serdi uses one page less memory, but will likely be significant
 
 .TP
 .BR \-f
-Keep full URIs in input (don't qualify).
+Keep full URIs in input (don't qualify with namespace prefixes or make URIs relative).
 
 .TP
 .BR \-h
